crates/reinhardt-core/macros/tests/ui/injectable/fail/non_inject_param.rs
use reinhardt_macros::injectable;

struct MyService;

#[injectable]
fn bad_factory(regular_param: String) -> MyService {
	MyService
}

fn main() {}
